try to fix the image in link preview

--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,16 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta property="og:image" content="https://me-wheat-nine.vercel.app/images/me-preview.png">
+    <meta name="description" content="Cybersecurity student, Arch Linux user, and Rustacean">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="me-wheat-nine.vercel.app">
+    <meta property="og:description" content="Cybersecurity • Arch Linux • Rustaceans">
+
+    <meta property="og:site_name" content="Sultan Al-Salahi Portfolio">
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
