add link preview for twitter or X

--- a/src/app.html
+++ b/src/app.html
@@ -3,15 +3,20 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <meta property="og:image" content="https://me-wheat-nine.vercel.app/images/me-preview.png">
     <meta name="description" content="Cybersecurity student, Arch Linux user, and Rustacean">
 
+    <meta property="og:image" content="https://me-wheat-nine.vercel.app/images/me-preview.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="me-wheat-nine.vercel.app">
     <meta property="og:description" content="Cybersecurity • Arch Linux • Rustaceans">
-
     <meta property="og:site_name" content="Sultan Al-Salahi Portfolio">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="me-wheat-nine.vercel.app">
+    <meta property="twitter:url" content="https://me-wheat-nine.vercel.app">
+    <meta name="twitter:title" content="Abu Jandal - The humble servant of Allah">
+    <meta name="twitter:description" content="Cybersecurity • Arch Linux • Rustaceans">
+    <meta name="twitter:image" content="https://me-wheat-nine.vercel.app/images/me-preview.png">
 
 		%sveltekit.head%
 	</head>
