--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Cybersecurity student, Arch Linux user, and Rustacean">
 
-    <meta property="og:image" content="https://me-wheat-nine.vercel.app/images/me-preview.png">
+    <meta property="og:image" content="https://me-wheat-nine.vercel.app/images/me-preview.jpg">
     <meta property="og:type" content="website">
     <meta property="og:url" content="me-wheat-nine.vercel.app">
     <meta property="og:description" content="Cybersecurity • Arch Linux • Rustaceans">
@@ -16,7 +16,7 @@
     <meta property="twitter:url" content="https://me-wheat-nine.vercel.app">
     <meta name="twitter:title" content="Abu Jandal - The humble servant of Allah">
     <meta name="twitter:description" content="Cybersecurity • Arch Linux • Rustaceans">
-    <meta name="twitter:image" content="https://me-wheat-nine.vercel.app/images/me-preview.png">
+    <meta name="twitter:image" content="https://me-wheat-nine.vercel.app/images/me-preview.jpg">
 
 		%sveltekit.head%
 	</head>
